Fixed form alignment

--- a/oui-oui-fashion2/style.css
+++ b/oui-oui-fashion2/style.css
@@ -235,6 +235,32 @@ color: ##000000;
     margin-top: 30px;
 }
 
+.form{
+    text-align: center;
+    margin-top: 30px;
+
+}
+.heading2{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.message-form{
+margin: 50px 0px 0px 250px;
+}
+
+.form-input{
+margin-top: 20px;
+min-height: 30px;
+min-width: 500px;
+}
+
+.message-input{
+margin-bottom: 10px;
+height: 100px;
+width: 500px;
+}
+
 /***Login and registration*/
 
 
@@ -492,7 +518,7 @@ color: #777474;
 
 .btn {
     display: inline-block;
-    background: #ff523b;
+    background: #000000;
     color: #fff;
     padding: 8px 30px;
     margin: 30px 0;
@@ -501,17 +527,6 @@ color: #777474;
 }
 
     .btn:hover {
-        background: #563434;
+        background: #424242;
     }
 
-    /****contact us page form****/
-
-.form{
-    text-align: center;
-    margin-top: 30px;
-   
-}
-.heading2{
-    text-align: center;
-    margin-bottom: 20px;
-}
